# pyetsimul

./: .gitignore  .readthedocs.yaml  README.md  basic_usage_demo.py  cornea_comparison_figure.py  pyproject.toml  requirements.txt
docs/: conf.py  getting_started.rst  index.rst  polynomials.md
docs/api/: core.rst  evaluation.rst  gaze_mapping.rst  geometry.rst  index.rst  (+4 more)
et_simul/: __init__.py
examples/: __init__.py  algorithm_comparison.py  basic_eye_anatomy_demo.py  basic_usage_demo.py  camera_distortion.py  cornea_comparison_figure.py  custom_gaze_model.md  custom_gaze_model.py  custom_polynomial_example.py  data_generation.py  data_generation_tutorial.ipynb  example.py  eye_anatomy.py  eyelid_openness_comparison.py  eyelink1000plus.py  glint_noise_demo.py  hennessey.py  interpolate.py  multi_eye_tracking_setup.py  polynomial_multi_glint.py  pupil_decentration.py  realistic_pupil.py  realistic_pupil_comparison.py  run_all_examples.py  setup_visualization.py  simple_data_generation.py  visualization_animation.py  visualization_demo.py  yoo.py
eye_trackers/: __init__.py  hennessey.py  interpolate.py
pyetsimul/: __init__.py  log.py
unit_tests/: __init__.py  fovea_analysis.py  test_angle2gaze.py  test_camera_pan_tilt.py  test_camera_point_at.py  test_camera_project.py  test_camera_take_image.py  test_camera_unproject.py  test_coordinate_system_validation.py  test_eye_find_cr.py  test_eye_find_cr_simple.py  test_eye_find_refraction.py  test_eye_get_pupil.py  test_eye_get_pupil_image.py  test_eye_look_at.py  test_eye_point_within_cornea.py  test_eye_pupil_size.py  test_eye_refract_ray.py  test_eye_refract_ray_advanced.py  test_eye_refract_ray_dual_surface.py  test_find_reflection.py  test_find_reflection_conic.py  test_find_reflection_sphere.py  test_find_refraction.py  test_find_refraction_conic.py  test_find_refraction_sphere.py  test_gaze2angle.py  test_geometry_types_arithmetic.py  test_glint_noise.py  test_intersect_ray_circle.py  test_intersect_ray_conic.py  test_intersect_ray_plane.py  test_intersect_ray_sphere.py  test_intersect_ray_spheroid.py  test_line_intersect_2d.py  test_lines_closest_point.py  test_listings_law.py  test_polynomial_validation.py  test_reflect_ray_circle.py  test_reflect_ray_conic.py  (+6 more)
validation_and_scientific_exploitation/: __init__.py  exploration_conic_vs_sphere.py  exploration_pupil_size_decentration.py  exploration_realistic_pupil.py  exploration_screen_and_observer_test.py  validation_conic_cornea.py  validation_pupil_decentration.py  validation_realistic_pupil.py
(+248 files in other folders)
