[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "et-simul"
version = "1.0.0"
description = ""
authors = [{name = "Mohammadhossein Salari", email = "Mohammadhossein.Salari@gmail.com"}]
license = {text = "GPL-3.0-or-later"}
readme = {text = "Based on et_simul — © 2008 Martin Böhme, University of Lübeck\nPython port © 2025 Mohammadhossein Salari", content-type = "text/plain"}
dependencies = [
    "matplotlib~=3.10.3",
    "numpy<2.3,>=1.24",
    "scipy~=1.16.0",
    "scikit-image~=0.25.2",
    "opencv-python>=4.12",
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["et_simul*"]

[tool.ruff]
line-length = 119
lint.ignore = ["E741"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
