[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyetsimul"
version = "0.9.1"
description = "PyEtSimul: An Open-Source Python Software Framework for Eye Tracking Simulation"
authors = [{name = "Mohammadhossein Salari", email = "Mohammadhossein.Salari@gmail.com"}]
license = {text = "GPL-3.0-or-later"}
readme = {text = "PyEtSimul: Based on pyetsimul — © 2008 Martin Böhme, University of Lübeck\nPython port © 2025 Mohammadhossein Salari", content-type = "text/plain"}
dependencies = [
    "matplotlib~=3.10.3",
    "numpy<2.3,>=1.24",
    "scipy~=1.16.0",
    "scikit-image~=0.25.2",
    "opencv-python>=4.12",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyetsimul*"]

[tool.ruff]
line-length = 119
lint.ignore = ["E741"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
